[tool.poetry]
name = "flask_api_example"
version = "0.1.0"
description = ""
authors = ["hyeseong-lee <hyeseong43@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
dnspython = "^2.1.0"
pymongo = "^3.11.3"
Flask-PyMongo = "^2.3.0"
PythonDNS = "^0.1"
Flask-SQLAlchemy = "^2.5.1"
pysqlite3 = "^0.4.6"
PyJWT = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
